--- a/package.json
+++ b/package.json
@@ -3,18 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.0",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.20",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "styled-components": "^5.0.0-rc.2",
-    "typescript": "^3.7.3"
+    "styled-components": "^5.0.0-rc.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,6 +29,11 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^4.4.1"
+    "@types/node": "^12.12.20",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "@types/styled-components": "^4.4.1",
+    "typescript": "^3.7.3",
+    "react-scripts": "3.3.0"
   }
 }
