--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,11 +30,13 @@
     ]
   },
   "devDependencies": {
+    "@types/express": "^4.17.2",
     "@types/node": "^12.12.20",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.1",
-    "typescript": "^3.7.3",
-    "react-scripts": "3.3.0"
+    "express": "^4.17.1",
+    "react-scripts": "3.3.0",
+    "typescript": "^3.7.3"
   }
 }
