--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.1",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.17.0",
     "react-scripts": "3.3.0",
     "typescript": "^3.7.3"
   }
