--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.23",
+    "express": "^4.17.1",
+    "graphql": "^14.5.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "express": "^4.17.1",
     "styled-components": "^5.0.0-rc.2"
   },
   "scripts": {
