--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.1",
+    "prettier": "1.19.1",
     "react-scripts": "3.3.0",
     "typescript": "^3.7.3"
   }
