--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "express": "^4.17.1",
     "graphql": "^14.5.8",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "styled-components": "^5.0.0-rc.2"
+    "react-dom": "^16.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
