--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.17.1",
     "graphql": "^14.5.8",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-hook-form": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
