--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.0.0-beta.23",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.5.5"
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/jsonwebtoken": "^8.3.6",
     "@types/node": "^12.12.20",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
