--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.23",
+    "@apollo/link-ws": "^2.0.0-beta.3",
     "@types/react-router-dom": "^5.1.3",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
@@ -11,7 +12,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.5.5",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
     "start": "react-scripts start",
