--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@apollo/client": "^3.0.0-beta.23",
     "@apollo/link-ws": "^2.0.0-beta.3",
     "@types/react-router-dom": "^5.1.3",
+    "bootstrap": "^4.4.1",
+    "dashkit": "git+https://eaf2767e79347b37360725de060568017e2c85e3:x-oauth-basic@github.com/larsonlaidlaw/fitshipper-dashkit.git#master",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
     "jsonwebtoken": "^8.5.1",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-feather": "^2.0.3",
     "react-hook-form": "^4.5.5",
     "react-router-dom": "^5.1.2",
     "subscriptions-transport-ws": "^0.9.16"
