--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.0.0-beta.23",
+    "@apollo/client": "^3.0.0-beta.29",
     "@apollo/link-ws": "^2.0.0-beta.3",
     "@types/react-router-dom": "^5.1.3",
     "bootstrap": "^4.4.1",
-    "dashkit": "git+https://eaf2767e79347b37360725de060568017e2c85e3:x-oauth-basic@github.com/larsonlaidlaw/fitshipper-dashkit.git#master",
+    "dashkit": "larsonlaidlaw/fitshipper-theme",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
     "jsonwebtoken": "^8.5.1",
